--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -22,6 +22,7 @@ runs:
     - name: Install dependencies
       id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
-      run: npm ci
-           echo "::set-output name=cache::"${{ inputs.caching }}
+      run: |
+        npm ci
+        echo "::set-output name=cache::'${{ inputs.caching }}'"
       shell: bash 
