--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deployment
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -63,6 +63,7 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy site
+        id: deploy
         uses: ./.github/actions/deploy-s3-javascript
         env: 
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -71,3 +72,6 @@ jobs:
           bucket: gha-custom-action-hosting
           dist-folder: ./dist
           #bucket-refion: us-east-2
+      - name: Output information  
+        run: |
+          echo "Live URL: ${{ steps.deploy.outputs.website-url }}"
