--- a/.github/actions/deploy-s3-docker/action.yml
+++ b/.github/actions/deploy-s3-docker/action.yml
@@ -1,5 +1,5 @@
-name: 'Deploy to AWS S3'
-description: 'Deploy a static website via AWS S3.'
+name: 'Deploy to AWS S3.'
+description: 'Deploy a static webiste via AWS S3.'
 inputs:
   bucket: 
     description: 'the S3 bucket name.'
@@ -11,7 +11,9 @@ inputs:
   dist-folder:
     description: 'The folder containing the deployable files'
     required: true
-
-runs: 
-  using: 'node16'
-  main: 'main.js'
+outputs: 
+  website-url:
+    description: 'The URL of the deployed website.'
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
